cargando archivos de tablas

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
 
     <img src="img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
 
-    <a href="html/subpagina.html">Ir a la pagina secundaria</a>
+    <a href="html/subpagina.html">Ir a la pagina secundaria</a><br>
+    <a href="html/tablas.html">VER TABLAS</a>
 </body>
 </html>
