--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,10 @@
 <body>
     
     <script src="js/myjs.js"></script>
-
     <h1>Tienda web</h1>
-
     <img src="img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
-
-    <a href="html/subpagina.html">Ir a la pagina secundaria</a><br>
-    <a href="html/tablas.html">VER TABLAS</a>
+    <a href="html/subpagina.html"> pagina secundaria</a><br>
+    <a href="html/tablas.html">VER TABLA</a><br>
+    <a href="html/form.html">FORMULARIO</a>
 </body>
 </html>
