--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,12 @@
     
 </head>
 <body>
-    
-    <script src="js/myjs.js"></script>
     <h1>Tienda web</h1>
-    <img src="img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
     <a href="html/subpagina.html"> pagina secundaria</a><br>
-    <a href="html/tablas.html">VER TABLA</a><br>
-    <a href="html/form.html">FORMULARIO</a>
+    <a href="html/tablas.html">VER TABLA</a>
+    <a href="html/form.html">FORMULARIO</a><br>
+    <a href="./html/newform.html">INPUT FORM</a><br>
+    <img src="img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
+    <script src="js/myjs.js"></script>
 </body>
 </html>
