creacion de nueva carpeta

--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,14 @@
 <body>
     <h1>Tienda web</h1>
     <a href="html/subpagina.html"> pagina secundaria</a><br>
-    <a href="html/tablas.html">VER TABLA</a>
+    <a href="html/tablas.html">VER TABLA</a><br>
     <a href="html/form.html">FORMULARIO</a><br>
     <a href="./html/newform.html">INPUT FORM</a><br>
-    <img src="img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
+    <a href="html/multimedia.html">MULTIMEDIA</a><br>
+    <a href="html/semantica.html">SEMANTICA</a><br>
+    <a href="html/validaciones.html">VALIDACIONES</a><br>
+
+    <img src="./multimedia/img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
     <script src="js/myjs.js"></script>
 </body>
 </html>
