--- a/html/form.html
+++ b/html/form.html
@@ -10,10 +10,10 @@
     <h1>FORMULARIOS</h1>
     <fieldset>
         <form action="">
-            <label for="">Nombre Completo</label>
-            <input type="text">
+            <label for="">Nombre Completo</label> 
+            <input type="text" required minlength="3">
             <label for="">DIRECCION</label>
-            <input type="text">
+            <input type="text" required placeholder="Barrio o Direcciòn">
             <label for="">OBSERVACION</label>
             <input type="text">
             <button>ENVIAR</button>
