--- a/html/tablas.html
+++ b/html/tablas.html
@@ -21,25 +21,25 @@
         <tbody>
             <tr> 
                 <td>COLOMBNIA</td>
-                <td><img src="../img/Escudo Colombia.png" width="100px" height="95px" alt="Escudo seleccion"></td>
+                <td><img src="../multimedia/img/Escudo Colombia.png" width="100px" height="95px" alt="Escudo seleccion"></td>
                 <td>15</td>
                 <td>9</td>
             </tr>
             <tr>
                 <td>BRASIL</td>
-                <td><img src="../img/Escudo brasil.png" width="100px" height="95px" alt="Escudo seleccion"></td>
+                <td><img src="../multimedia/img/Escudo brasil.png" width="100px" height="95px" alt="Escudo seleccion"></td>
                 <td>12</td>
                 <td>8</td>
             </tr>
             <tr>
                 <td>ARGENTINA</td>
-                <td><img src="../img/Escudo Argentina.png" width="100px" height="95px" alt="Escudo seleccion"></td>
+                <td><img src="../multimedia/img/Escudo Argentina.png" width="100px" height="95px" alt="Escudo seleccion"></td>
                 <td>10</td>
                 <td>6</td>
             </tr>
             <tr>
                 <td>PERU</td>
-                <td><img src="../img/escudo peru.png" width="100px" height="95px" alt="Escudo seleccion"></td>
+                <td><img src="../multimedia/img/escudo peru.png" width="100px" height="95px" alt="Escudo seleccion"></td>
                 <td>5</td>
                 <td>3</td>
             </tr>   
