--- a/Index.html
+++ b/Index.html
@@ -5,20 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="multimedia/img/balon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
-    <h1>Tienda web</h1>
-    <a href="html/subpagina.html"> pagina secundaria</a><br>
-    <a href="html/tablas.html">VER TABLA</a><br>
-    <a href="html/form.html">FORMULARIO</a><br>
-    <a href="./html/newform.html">INPUT FORM</a><br>
-    <a href="html/multimedia.html">MULTIMEDIA</a><br>
-    <a href="html/semantica.html">SEMANTICA</a><br>
-    <a href="html/validaciones.html">VALIDACIONES</a><br>
-
-    <img src="./multimedia/img/futbol.jpg" width="300" height="200" alt="Es una cancha de futbol"><br>
-    <script src="js/myjs.js"></script>
+   <header>
+    <!-- Menu de la pagina -->
+    <nav>
+        <section class="contenedor nav">
+            <div class="logo">
+                <img src="multimedia/img/balon.png" alt="Una imagen de balon">
+            </div>
+            <div class="enlaces_header">
+                <a href="">enlace</a>
+                <a href="">enlace</a>
+                <a href="">enlace</a>
+                <a href="">enlace</a>
+                <a href="">enlace</a>
+            </div>
+        </section>
+    </nav>
+    <!-- Contenedor de la pagina -->
+    <div class="contenedor">
+        <section class="contenido_header">
+            <section class="text_header">
+                <h1>AQUI PUEDE IR DIFERENTE CONTENIDO</h1>
+                <p>Texto correspondiente al area</p>
+            </section>
+            <img id="foto_perfil" src="multimedia/img/balon.png" alt="Esta es una imagen del balon">
+        </section>
+    </div>
+   </header>
 </body>
 </html>
