--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
             <div class="enlaces_header">
                 <a href="">enlace</a>
                 <a href="">enlace</a>
-                <a href="">enlace</a>
+                <a href="html/hoja_vida.html">enlacsss</a>
                 <a href="">enlace</a>
                 <a href="">enlace</a>
             </div>
