--- a/html/hoja_vida.html
+++ b/html/hoja_vida.html
@@ -25,12 +25,15 @@
                     <a href="#">inicio</a>
                     <a href="#">inicio</a>
                 </div>
+                <div class="hamburguer">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </section>
         </nav>
         <div class="contenedor">
             <section class="contenido-header">
                 <section class="textos-header">
-                    <h1>WILDER ANDRES DUARTE NEIRA</h1>
+                    <h1>JOHAN SEBASTIAN BERMUDEZ CONTRERAS</h1>
                     <div class="titulospro">
                         <h3><i class="fa-solid fa-circle-check"></i>  Ingeniería de Sistemas (e)</h3>
                         <h3><i class="fa-solid fa-circle-check"></i>  Bachiller Técnico</h3>
@@ -44,6 +47,31 @@
             </section>
         </div>
     </header>
+    <!--EDUCATION-->
+    <section class="section-education">
+        <div class="contenedor">
+            <div class="title">
+                <h2>Educación</h2>                
+            </div>
+            <div class="content-education">
+                <div class="education">
+                    <i class="fa-solid fa-school"></i>
+                    <h3>Ingeniero en sistemas (e)</h3>
+                    <p>Universidad Francisco de Paula Santander Ocaña</p>
+                    <p>En curso</p>
+                    <a href="#" target="_blank">Ver Documento</a>
+                </div>
+                <div class="education">
+                    <i class="fa-solid fa-school"></i>
+                    <h3>Ingeniero en sistemas (e)</h3>
+                    <p>Universidad Francisco de Paula Santander Ocaña</p>
+                    <p>En curso</p>
+                    <a href="#" target="_blank">Ver Documento</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!--PIE DE PAGINA-->
     <footer>
         <div class="partFooter">
@@ -83,5 +111,6 @@
     </footer>
     
     <script src="https://kit.fontawesome.com/c0210f8853.js" crossorigin="anonymous"></script>
+    <script src="../js/myjs.js"></script>
 </body>
 </html>
