--- a/Index.html
+++ b/Index.html
@@ -111,6 +111,6 @@
     </footer>
     
     <script src="https://kit.fontawesome.com/c0210f8853.js" crossorigin="anonymous"></script>
-    <script src="../js/myjs.js"></script>
+    <script src="js/myjs.js"></script>
 </body>
 </html>
