--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hoja de vida, Curriculum Vitae de Wilder Duarte">
-    <meta name="title" content="Hoja de Vida de Wider Duarte">
+    <meta name="description" content="Hoja de vida, Curriculum Vitae de JohanBermudez">
+    <meta name="title" content="Hoja de Vida de JohanBermudez">
     <meta name="keywords" content="Hoja de Vida, Curriculum Vitae, HV, CV, Perfil Profesional">
     <link rel="author" href="ENLACE DE LINKEDIN">
-    <link rel="icon" href="img/WilderDuarte.png" type="image/png">
+    <link rel="icon" href="multimedia/img/balon.png" type="image/png">
     <title>Hoja de Vida - Wilder Duarte</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/hoja_vida.css">
@@ -107,7 +107,7 @@
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-        </div>
+        </div>    
     </footer>
     
     <script src="https://kit.fontawesome.com/c0210f8853.js" crossorigin="anonymous"></script>
